--- a/src/index.css
+++ b/src/index.css
@@ -408,4 +408,13 @@
   .rich-text-editor [contenteditable] em {
     @apply italic;
   }
+
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
+  }
 }
